--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bored Apes Fan Club NFT</title>
+    <title>(BAFC) Bored Apes Fan Club - NFT Collection</title>
     <meta name="description" content="Mint Bored Apes Fan Club NFT" />
   </head>
   <body>
